    - Fix Github Issue #2904 - Provide useful error message when more than one Configure Contexts are opened.
      Only one open is allowed. You must call conf.Finish() to complete the currently open one before creating another
    - Add msys2 installed mingw default path to PATH for mingw tool.
      - C:\msys64\mingw64\bin
    - Purge obsolete internal build and tooling scripts
    
  From Jeremy Elson:
    - Updated design doc to use the correct syntax for Depends()

  From Adam Gross:
    - Added support for scanning multiple entries in an action string if
      IMPLICIT_COMMAND_DEPENDENCIES is set to 2 or 'all'. This enables more thorough
      action scanning where every item in each command line is scanned to determine
      if it is a non-source and non-target path and added to the list of implicit dependencies
      for the target.
    - Added support for taking instances of the Value class as implicit
      dependencies.
    - Added new module SCons.Scanner.Python to allow scanning .py files.
    - Added support for explicitly passing a name when creating Value() nodes. This may be useful
      when the value can't be converted to a string or if having a name is otherwise desirable.
    - Fixed usage of abspath and path for RootDir objects on Windows. Previously
      env.fs.Dir("T:").abspath would return "T:\T:" and now it correctly returns "T:".

  From Iosif Kurazs:
    - Added a new flag called "linedraw" for the command line argument  "--tree"
      that instructs scons to use single line drawing characters to draw the dependency tree.

  From Andrew Morrow:
    - Fix Issue #3469 - Fixed improper reuse of temporary and compiled files by Configure when changing
      the order and/or number of tests.  This is done by using the hash of the generated temporary files
      content and (For the target files) the hash of the action.
      So where previously files would be named:
      - config_1.c, config_1.o, config_1